hphp/hack/test/typecheck/ambiguous_constructor.php.exp
File "ambiguous_constructor.php", line 9, characters 7-7:
Class C does not correctly implement all required members  (Typing[4340])
File "ambiguous_constructor.php", line 10, characters 7-8:
Some members are incompatible with those declared in type T1
Read the following to see why:
File "ambiguous_constructor.php", line 6, characters 19-29:
Member __construct has the wrong type
File "ambiguous_constructor.php", line 6, characters 19-29:
T2 and T1 both declare ambiguous implementations of __construct.
File "ambiguous_constructor.php", line 6, characters 19-29:
T2's definition is here.
File "ambiguous_constructor.php", line 3, characters 19-29:
T1's definition is here.
File "ambiguous_constructor.php", line 6, characters 19-29:
Redeclare __construct in C with a compatible signature.
